# onchain-mon

./: .dockerignore  .gitignore  .golangci.yml  .semgrepignore  CONFIG.md  Changelog.md  Dockerfile  Makefile  README.md  config.md  docker-compose.prod.yml  docker-compose.yml  feeder.md  forta-local-config.yml  forwarder.md  go.mod  go.sum  notification.dev.yaml  notification.prod.sample.yaml  notification.sample.yaml  pyproject.toml  sample.env
.github/: CODEOWNERS  pull_request_template.md
.github/actions/configure_sops/: action.yaml
.github/actions/import_gpg/: action.yml  origin.txt
.github/actions/import_sops_secrets/: action.yaml
.github/secrets/production/: .sops.yaml  ssh_private_key.sops
.github/workflows/: build_devel.yml  build_production.yml  development_build_and_deploy.yml  production_build_and_deploy.yml
ansible/: .ansible-lint  ansible.cfg  requirements.yml
ansible/inventories/: ci_user.yml
ansible/inventories/production/: hosts.yml
ansible/playbooks/: _onchain_mon_deploy.yml  main.yml
ansible/playbooks/group_vars/: all.yml
ansible/provider_inventories/production/: gce.tf.yml  gcp.yml
brief/databus/: block.dto.json  finding.dto.json
brief/proto/: finding.proto
cmd/feeder/: main.go
cmd/forwarder/: main.go
cmd/service/: main.go
cmd/worker/: main.go
docs/: code_style.md
example/: alerts.http
internal/app/feeder/: feeder.go
internal/app/forwarder/: forwarder.go
internal/env/: env.go  notification_channels.go  notify_config.go
nats/: nats.conf
tools/: go.mod  go.sum  tools.go
web/templates/: index.html
(+51 files in other folders)
