[tool.poetry]
name = "infra-mainnet"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
mitogen = "^0.3.7"
pytest = "^8.1"
ansible-lint = { version = "6.15", markers = "platform_system != 'Windows'" }
pytest-testinfra = "^10.1.0"
pytest-forked = "^1.6.0"
pytest-xdist= "^3.3"
pytest-subtests="^0.12"
flaky = "^3.8"
netaddr = "0.8.0"
websocket-client = "1.3.1"
requests = "^2.31.0"
requests-toolbelt = "1.0.0"
google-auth = "2.6.0"
dnspython = "2.2.1"
beautifulsoup4 = "^4.12.0"
python-dateutil = "2.8.2"
yamllint = "^1.35"
black = "^24.4"
feedparser = "6.0.8"
PyJWT = "2.3.0"
lido_slug = { path = "local_libs/lido_slug/", develop=false}
ruff = "^0.3.7"
ansible-core = "2.15.10"

[tool.poetry.dev-dependencies]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = ["E501", "E402"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "ansible_collections"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
